
=======================================================
            WanT code:  Log of Changes 
=======================================================


21 May 2007      Cobalt exmaple removed from test02; bands input changed (explicit output file
                 provided); references updated with bands*.dat files. Updates in dos.f90; 
                 self-energy (static case) added to bands; hermitean symmetrizator added to
                 util.f90; test08 updated. (AF)

20 May 2007      write_header.f90 routine added to libs/; fmt changes around; (AF)

18 May 2007      HAVE_MALLOC macro added to the search done by configure. Related changes
                 done (gcube2plt.c): this is useful to compile where malloc.h is included
                 in stdlib.h or in anyother header. Bug fixed in dos.x when dealing with 
                 staic self-energies. (AF)

30 Apr 2007      configure script updated from the one of espresso (cvs version): mac and
                 nec should be supported. (AF)

18 Apr 2007      Bug fixed in transport with parallel kpts: meshes with odd number of
                 points did not repsect the required shift. Bug signalled by
                 Matias Nunez and Vincent Meunier. (AF)

08 Apr 2007      Txt output of conductor.x improved. (AF)  

30 Mar 2007      Calculation of the current added to transport. (BB)

29 Mar 2007      Bug fixed when giving nk(:) to conductor from input. Courtesy of 
                 Matias Nunez. (AF) 

28 Mar 2007      Calls to flush_unit added in wfc_manager, summary and improved in 
                 disentangle. (AF)

25 Mar 2007      Defaults to nprint and nsave stuff incremented. collect_wf.f90 routine
                 and collect procedure fixed. Bug in conditioned minimization fixed: 
                 there were problems when one or more centers were jumping out of the
                 reference cell: the issue was first raised by Laura Zoppi. (AF)
